[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "templateplay"
version = "0.0.3"
requires-python = ">=3.10"
authors = [
  { name="Bruno Cabral", email="cabral.brc@gmail.com" },
]
license = {text = "MIT License"}
readme = "README.md"
description = "Use images template matching to send commands"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "opencv-python>=4.8",
    "pyautogui>=0.9",
    "numpy>=1.16"
]
